Updated 01.Data Types (markdown)

--- a/01.Data-Types.md
+++ b/01.Data-Types.md
@@ -10,12 +10,12 @@ In Verilog, all the data types were of 4-state, i.e., it could represent 0, 1, X
 
 sr. no. | **data type**         |
 |:--|:---------------------- |
-|1.|[4-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Data-Types#4-state-data-type-cheat-sheet) |
-|2.|[2-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Data-Types#2-state-data-type-cheat-sheet) |
+|1.|[4-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#4-state-data-type-cheat-sheet) |
+|2.|[2-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#2-state-data-type-cheat-sheet) |
 |3.|[Arrays](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Array) | 
-|4.|[Strings](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Data-Types#string) |
+|4.|[Strings](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#string) |
 |5.|[Structures and Union](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Structure-and-Union) |
-|6.|[Enumerated](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Data-Types#enum) | 
+|6.|[Enumerated](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#enum) | 
 |7.|[User defined](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/User-defined) |
 
         Tabular column.1. data types
