Updated 03.Control Flow (markdown)

--- a/04.Control-Flow.md
+++ b/04.Control-Flow.md
@@ -20,12 +20,12 @@ There are different types of conditional statements. These are --
 
 |S.No|Conditional Statement|
 |:-----|:---------------------|
-|1.|[if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#1-if-without-else)|
-|2.|[if-else](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#2-if-else)|
-|3.|[if-else ladder](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#3-if-else-ladder)|
-|4.|[unique if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#4-unique-if)|
-|5.|[unique0 if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#5unique0if)|
-|6.|[priority if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Control-Flow#6priority-if)|
+|1.|[if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.Control-Flow#1-if-without-else)|
+|2.|[if-else](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.Control-Flow#2-if-else)|
+|3.|[if-else ladder](https://github.com/muneeb-mbytes/SystemVerilog_Course/04.wiki/Control-Flow#3-if-else-ladder)|
+|4.|[unique if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.Control-Flow#4-unique-if)|
+|5.|[unique0 if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.Control-Flow#5unique0if)|
+|6.|[priority if](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.Control-Flow#6priority-if)|
 
 
 
