Updated operators (markdown)

--- a/05.operators.md
+++ b/05.operators.md
@@ -9,15 +9,15 @@ the operator is a character that represents a specific mathematical or logical a
 
 |s.No.| Operator|  
 |:------|:-------|
-|1.| [Arithmetic Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#1-arithmetic-operators)|
-|2.| [Relational operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#2relational-operator)|
-|3.| [Equality operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#3equality-operator)|
-|4.| [Logical Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#4logical-operator)|
-|5.| [Bitwise Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#5bitwise-operator)|
-|6.| [Shift Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#6shift-operator)|
-|7.| [Conditional Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#7conditional-operator)|
-|8.| [Reduction Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#8reduction-operator)|
-|9.| [Concatenation and Replication Operators](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/operators#9concatenation-and-replication-operators)|
+|1.| [Arithmetic Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#1-arithmetic-operators)|
+|2.| [Relational operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#2relational-operator)|
+|3.| [Equality operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#3equality-operator)|
+|4.| [Logical Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#4logical-operator)|
+|5.| [Bitwise Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#5bitwise-operator)|
+|6.| [Shift Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#6shift-operator)|
+|7.| [Conditional Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#7conditional-operator)|
+|8.| [Reduction Operator](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#8reduction-operator)|
+|9.| [Concatenation and Replication Operators](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/05.operators#9concatenation-and-replication-operators)|
 
 ## 1. Arithmetic Operators      
 We use arithmetic operators to perform basic mathematic functions on our variables. These operators should already be familiar as they are mostly replications of common mathematic symbols.  
