Updated 07.Functions (markdown)

--- a/07.Functions.md
+++ b/07.Functions.md
@@ -24,16 +24,16 @@ syntax :
 
 There are a lot of variations to call a function  
 
-* [Calling a function with values as arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-values-as-arguments)   
-* [Calling a function with variables as arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-variables-as-arguments)   
-* [Calling a function with values from an expression](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-values-from-an-expression) 
-* [Calling a function with variables with positional arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-variables-with-positional-arguments)  
-* [calling an automatic function](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-an-automatic-function)  
-* [calling a function with variables with reference of variables](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-variables-with-reference-of-variables)   
-* [calling a function with a void return type](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-a-void-return-type)   
-* [calling a function with return an array](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-with-return-an-array)  
-* [calling a function from an expression that returns an array](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-function-from-an-expression-that-returns-an-array)      
-* [Calling a task from function(exceptional case by using fork and join_none)](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Functions#calling-a-task-from-a-function)  
+* [Calling a function with values as arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-values-as-arguments)   
+* [Calling a function with variables as arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-variables-as-arguments)   
+* [Calling a function with values from an expression](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-values-from-an-expression) 
+* [Calling a function with variables with positional arguments](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-variables-with-positional-arguments)  
+* [calling an automatic function](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-an-automatic-function)  
+* [calling a function with variables with reference of variables](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-variables-with-reference-of-variables)   
+* [calling a function with a void return type](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-a-void-return-type)   
+* [calling a function with return an array](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-with-return-an-array)  
+* [calling a function from an expression that returns an array](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-function-from-an-expression-that-returns-an-array)      
+* [Calling a task from function(exceptional case by using fork and join_none)](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/07.Functions#calling-a-task-from-a-function)  
 
 
 ## Calling a function with values as arguments
