Updated Processes (markdown)

--- a/11.Processes.md
+++ b/11.Processes.md
@@ -11,18 +11,18 @@ In the below Fig-1 we can see that types of processes and the process controls.
 
 |**S.no**| **Processes**         | **Description** |
 |:-------|:---------------------- | :-------------|
-|1.|[fork-join](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#1fork-join)|Parent threads will be executed only when all child threads are executed.|
-|2.|[fork-join_any](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#2fork-join_any)|Parent threads will be executed only when anyone of the child thread gets executed.|
-|3.|[fork-join_none](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#3fork-join_none)|Parent threads will be executed parallel with the child threads.|
-|4.|[wait fork](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#1wait-fork)|It makes the parent Threads to wait until all the child threads are executed.|
-|5.|[disable fork](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#2disable-fork)|It will terminate the execution of all the child threads when disable fork is execute.|
-|6.|[Fine Grain Process Control](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Fine-Grain-Process-Control)|These are used to control the processes and it will provide the status of the process/Thread.|
+|1.|[fork-join](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#1fork-join)|Parent threads will be executed only when all child threads are executed.|
+|2.|[fork-join_any](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#2fork-join_any)|Parent threads will be executed only when anyone of the child thread gets executed.|
+|3.|[fork-join_none](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#3fork-join_none)|Parent threads will be executed parallel with the child threads.|
+|4.|[wait fork](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#1wait-fork)|It makes the parent Threads to wait until all the child threads are executed.|
+|5.|[disable fork](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#2disable-fork)|It will terminate the execution of all the child threads when disable fork is execute.|
+|6.|[Fine Grain Process Control](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Fine-Grain-Process-Control)|These are used to control the processes and it will provide the status of the process/Thread.|
 
 ## Processes or Threads
 We have 3 types of Threads/Processes  
-1. [fork-join](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes#1fork-join)  
-2. [fork-join_any](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#2fork-join_any)  
-3. [fork-join_none](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Processes/#3fork-join_none)  
+1. [fork-join](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes#1fork-join)  
+2. [fork-join_any](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#2fork-join_any)  
+3. [fork-join_none](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/11.Processes/#3fork-join_none)  
 
 ## 1.fork-join
 System Verilog provides support for parallel threads through fork-join construct. In fork-join process parent thread will execute only when all the child thread are finished their execution.  
