Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -340,28 +340,6 @@ Eg. default input #3ps output #2
 `output to_Dut;`  
 `endclocking`    
 
-The below figure shows that timing regions of Interface in  systemVerilog.  
-
-![image](https://user-images.githubusercontent.com/110484152/188817365-8bd23adb-d71c-4050-81db-29ab1416b69a.png)  
-
-                                              Fig 3: Timing Regions of Interface in systemVerilog    
-
-**Timing Regions**    
-
-* The testbench and DUT evaluates in the active region itself in verilog. The race conditions occur due to the read and write operation to be done at the simulation time. The output will be metastable for the clock cycle. 
-
-* To avoid this race condition, SystemVerilog introduces division of time slots.    
-
-The above diagram shows that how the testbench and DUT avoid race condition by using clocking blocks in Interfaces.
-
-1.  Active Region: Simulation of design code in modules.    
-2.  Observed Region: Assertions evaluated their design executes.    
-3.  Reactive Region: Execution of testbench.    
-4.  Postpone Region: Sampling signals after all design activity for the next clock cycle .eg, #1step time taken for the sampling process.    
-  
-The  design and testbench are evaluated in different time regions. So, SystemVerilog 
-
-Note: You can refer the SystemVerilog scheduling schemantic (wiki) for your reference to know more about the execution regions.
 
 **Example**  
 
@@ -371,7 +349,448 @@ Note: You can refer the SystemVerilog scheduling schemantic (wiki) for your refe
 `output ;`  
 `endclocking`  
 
-**Output**      
+**Output** 
+
+
+---
+
+
+Example D_flipflop
+
+![clocking block](https://user-images.githubusercontent.com/110412474/190890934-67850b63-33fc-4009-a977-4539941d2a15.jpg)
+---
+### Clocking Skew
+
+The below figure shows the Input skew and output skew    
+
+![image](https://user-images.githubusercontent.com/110484152/188549973-1030d92b-3525-460f-a83a-eb51cc694689.png)  
+
+                                         Fig 2: Input skew and output skew    
+
+Input  signals are sampling with respect to the clock event. If an input skew is specified then the signal is sampled at skew time units before the clock event. Then the  output signals are driving skew simulation time units after the corresponding clock event. Input  skew is implicitly negative because it happens before the clock.   
+
+In Input skew, the input signal sampled at the end of previous step ie, postponed region and output signal sampled at after some time corresponding  to their clock event ie, Observed Region. In Output skew is positive because it refers the time after the clock event.  
+
+Eg. default input #3ps output #2
+
+**Syntax**    
+
+`clocking cb @(posedge clk);`  
+`default input #1step output #0;`  
+`input  from_Dut;`  
+`output to_Dut;`  
+`endclocking`    
+
+## CASE : 1
+
+
+![posedge_df_cb](https://user-images.githubusercontent.com/110448382/190957995-a87993b5-0aeb-491f-80b4-caf6775d81ff.png)
+
+In this case both DUT (clocking block clock) and Test is triggered at positive edge (interface clock).  
+Here in this scenario, the wave form output and display statement output is mismatching.  
+the output is shown in the below figure  
+
+**Example code:**
+
+**DUT code:**
+
+
+     // module:d_flipflop   
+     module d_flipflop(dff.dut intf);  
+ 
+      //clocking block cd  
+      always @(intf.cd)  
+
+     //Non-Blocking assignment   
+     intf.cd.q <= intf.cd.d;  
+ 
+      endmodule : d_flipflop    
+
+**Interface code:**
+
+     //module: Interface  
+     interface dff(input clk);    
+
+    //declare the signals    
+    logic d;   
+    logic q;   
+
+     //Clocking block for dut    
+     clocking cd @(posedge clk);   
+      default input #1step output #0;   
+        output q;   
+         input d;    
+       endclocking     
+  
+    //modport for dut    
+      modport dut(clocking cd);    
+
+    //modport for tb     
+    modport tb(input q, output d, input clk);`   
+   
+     endinterface: dff    
+
+**Test code:**
+
+     //module: test
+      module test(dff.tb intf);
+  
+      //task:drv
+      task drv;
+  
+    //loop
+    repeat(10)
+      begin
+    //test triggering at posedge
+        @(posedge intf.clk )
+
+    //randomzing the d
+       
+    intf.d <= $random;
+     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+      end
+      $finish;
+     endtask 
+  
+     //calling the task drv
+     initial
+       begin
+       drv();
+       end 
+     endmodule :test
+
+**Top module**
+
+     //including the file test.sv and interface.sv  
+      
+         `include "test.sv"      
+         `include "interface.sv"    
+ 
+     module top;
+      
+     bit clk=1;
+ 
+     initial
+    forever #5 clk = ~clk;
+
+     //creating interface instance
+       dff intf(clk);
+
+     //d_flipflop instance
+      d_flipflop t1(intf);  
+
+    //test Instance
+     test t2(intf);
+
+     initial
+     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+      endmodule : top
+
+
+**Transcript output**
+
+![dff_cb_ss4](https://user-images.githubusercontent.com/110448382/190955343-3ed506ad-4072-44b5-88fa-3e6ccaab70cd.png)
+
+
+**output of d_ff for all clock cycles**
+
+![dff_cb_ss3](https://user-images.githubusercontent.com/110448382/190954912-78ef6ee0-489b-47a0-b753-851949bdcda5.png)
+
+
+
+
+## CASE : 2
+
+![negedge_dff_cb](https://user-images.githubusercontent.com/110448382/190958047-e7f3e81c-e8df-490d-bddb-c8f8c58a50fa.png)
+
+In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (same interface clock).  
+Here in this scenario, the wave form output is mismatching with respect to the test(tb) and DUT waveform is matching, display statement output is matching.  
+the output is shown in the below figure  
+
+**Example code:**
+
+**DUT code:**
+
+
+     // module:d_flipflop   
+     module d_flipflop(dff.dut intf);  
+ 
+      //clocking block cd  
+      always @(intf.cd)  
+
+     //Non-Blocking assignment   
+     intf.cd.q <= intf.cd.d;  
+ 
+      endmodule : d_flipflop    
+
+**Interface code:**
+
+
+     //module: Interface  
+     interface dff(input clk);    
+
+    //declare the signals    
+    logic d;   
+    logic q;   
+
+     //Clocking block for dut    
+     clocking cd @(negedge clk);   
+      default input #1step output #0;   
+        output q;   
+         input d;    
+       endclocking     
+  
+    //modport for dut    
+      modport dut(clocking cd);    
+
+    //modport for tb     
+    modport tb(input q, output d, input clk);`   
+   
+     endinterface: dff    
+
+**Test code:**
+
+
+     //module: test
+      module test(dff.tb intf);
+  
+      //task:drv
+      task drv;
+  
+    //loop
+    repeat(10)
+      begin
+    //test triggering at posedge
+        @(posedge intf.clk )
+
+    //randomzing the d
+       
+    intf.d <= $random;
+     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+      end
+      $finish;
+     endtask 
+  
+     //calling the task drv
+     initial
+       begin
+       drv();
+       end 
+     endmodule :test
+
+**Top module**
+
+     //including the file test.sv and interface.sv  
+      
+         `include "test.sv"      
+         `include "interface.sv"    
+ 
+     module top;
+      
+     bit clk=1;
+ 
+     initial
+    forever #5 clk = ~clk;
+
+     //creating interface instance
+       dff intf(clk);
+
+     //d_flipflop instance
+      d_flipflop t1(intf);  
+
+    //test Instance
+     test t2(intf);
+
+     initial
+     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+      endmodule : top
+
+
+**Transcript output**
+
+![dff_cb_ss2](https://user-images.githubusercontent.com/110448382/190954180-c24851a3-24ec-4c45-9ec2-fca68fcd0f7f.png)
+
+
+**output of d_ff for all clock cycles**
+
+![dff_cb_ss3](https://user-images.githubusercontent.com/110448382/190954186-42dd7b1c-4546-44d3-8730-2dd29da0f65a.png)
+
+
+
+## CASE : 3
+
+In this case both DUT  is triggered at negative edge (clocking block clock) and Test is triggered at positive edge (interface clock).  
+Here in this scenario, the wave form output DUT and Tb is matching and display statement output is matching.  
+here we randomizing the value of 'd' after some delay time, so that the waveform is matching in this case-3 compared to case-2  
+the output is shown in the below figure  
+
+**Example code:**
+
+**DUT code:**
+
+
+     // module:d_flipflop   
+     module d_flipflop(dff.dut intf);  
+ 
+      //clocking block cd  
+      always @(intf.cd)  
+
+     //Non-Blocking assignment   
+     intf.cd.q <= intf.cd.d;  
+ 
+      endmodule : d_flipflop    
+
+**Interface code:**
+
+
+     //module: Interface  
+     interface dff(input clk);    
+
+    //declare the signals    
+    logic d;   
+    logic q;   
+
+     //Clocking block for dut    
+     clocking cd @(negedge clk);   
+      default input #1step output #0;   
+        output q;   
+         input d;    
+       endclocking     
+  
+    //modport for dut    
+      modport dut(clocking cd);    
+
+    //modport for tb     
+    modport tb(input q, output d, input clk);`   
+   
+     endinterface: dff    
+
+**Test code:**
+
+
+     //module: test
+      module test(dff.tb intf);
+  
+      //task:drv
+      task drv;
+  
+    //loop
+    repeat(10)
+      begin
+    //test triggering at posedge
+        @(posedge intf.clk )
+
+
+    //randomzing the d
+       #3ns;
+    intf.d <= $random;
+     $display("test side[%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.d, intf.q);
+      end
+      $finish;
+     endtask 
+  
+     //calling the task drv
+     initial
+       begin
+       drv();
+       end 
+     endmodule :test
+
+**Top module**
+
+     //including the file test.sv and interface.sv  
+      
+         `include "test.sv"      
+         `include "interface.sv"    
+ 
+     module top;
+      
+     bit clk=1;
+ 
+     initial
+    forever #5 clk = ~clk;
+
+     //creating interface instance
+       dff intf(clk);
+
+     //d_flipflop instance
+      d_flipflop t1(intf);  
+
+    //test Instance
+     test t2(intf);
+
+     initial
+     $monitor("DUT side [%0t]=d_tb_drive:%d q_dut_sample:%d",$time,intf.cd.d, intf.cd.q);
+      endmodule : top
+
+
+
+Here the DUT trigger at the negative edge clock and test triggered at the positive edge clock.  
+The test(Tb) drive the random values 'd' to the DUT. the DUT sample the value and  drive the 'q' to the Tb  
+
+**1st duty cycle @(negedge dut & posedge test) **  
+The 1-duty cycle is 10ns.
+Initially the D_flipflop value are indeterministic state i.e d=1'dx and q=1'dx for DUT and TB  
+
+output:
+
+![image](https://user-images.githubusercontent.com/110412474/190886641-84dcb413-06da-4a4d-b07b-ef8150e37967.png)
+
+`DUT side [0]=d_tb_drive:x q_dut_sample:x`  
+ `test side [3]=d_tb_drive:x q_dut_sample:x`  
+
+Here at negative edge the DUT is triggered 
+default input #1step and output #0
+input #1step: denotes the negative time delay from the edge of the clock(negative edge). when all the input are ready and steady for the sample. the sampling the signal is done before the edge of clock.
+output #0 :  At the negative edge (DUT) at #0 it drive the sampled value i.e output skew.
+
+![@5ns paint](https://user-images.githubusercontent.com/110412474/190887852-dc27b953-8346-4b87-b6a2-20b78ed0ce54.jpg)
+
+
+`DUT side [5]=d_tb_drive:0 q_dut_sample:0`
+
+**2nd duty cycle @(posedge clk & negedge clk)**
+
+at the positive edge the test is triggered  
+wave form @posedge clock  
+
+![image](https://user-images.githubusercontent.com/110412474/190888014-4bbe0ae1-2133-48c0-a4f6-cce58c4519f3.png)
+
+ `test side[13]=d_tb_drive:0 q_dut_sample:0`
+
+Here at negative edge the DUT is triggered 
+wave form @negedge clock  
+
+![image](https://user-images.githubusercontent.com/110412474/190889246-63408eef-2892-4a06-a90f-77d6b0b7ebe0.png)
+
+`DUT side [15]=d_tb_drive:1 q_dut_sample:1`
+
+**3rd duty cycle @(posedge clk & negedge clk) **
+
+at the positive edge the test is triggered  
+wave form @posedge clock  
+
+![image](https://user-images.githubusercontent.com/110412474/190889374-4515e80d-db33-4daa-a695-ae120fdfc43f.png)
+
+`test side[23]=d_tb_drive:1 q_dut_sample:1  `
+
+Here at negative edge the DUT is triggered 
+wave form @negedge clock
+
+![image](https://user-images.githubusercontent.com/110412474/190889429-fc69ec23-b308-4526-8130-daa5109802c2.png)
+
+` DUT side [25]=d_tb_drive:1 q_dut_sample:1`
+
+**output of d_ff for all clock cycles**
+
+![image](https://user-images.githubusercontent.com/110412474/190889483-16485595-1296-41d4-9d9e-d1f71f1701a7.png)
+
+**Transcript output**
+
+![dff_cb_ss1](https://user-images.githubusercontent.com/110448382/190952853-f6aa412a-e397-460a-ae05-8e7ae44c831f.png)
+
+
+---     
   
 **Advantages of Clocking Block**
   
