--- a/01.Data-Types.md
+++ b/01.Data-Types.md
@@ -12,11 +12,11 @@ sr. no. | **data type**         |
 |:--|:---------------------- |
 |1.|[4-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#4-state-data-type-cheat-sheet) |
 |2.|[2-state](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#2-state-data-type-cheat-sheet) |
-|3.|[Arrays](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Array) | 
+|3.|[Arrays](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/02.Array) | 
 |4.|[Strings](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#string) |
-|5.|[Structures and Union](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/Structure-and-Union) |
+|5.|[Structures and Union](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/03.Structure-and-Union) |
 |6.|[Enumerated](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/01.Data-Types#enum) | 
-|7.|[User defined](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/User-defined) |
+|7.|[User defined](https://github.com/muneeb-mbytes/SystemVerilog_Course/wiki/04.User-defined) |
 
         Tabular column.1. data types
 
