Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -469,12 +469,12 @@ the output is shown in the below figure
 
 **Transcript output**
 
-![dff_cb_ss4](https://user-images.githubusercontent.com/110448382/190955343-3ed506ad-4072-44b5-88fa-3e6ccaab70cd.png)
+![case_t1](https://user-images.githubusercontent.com/110448382/191226150-10b956b4-86d8-4c3d-8d58-2c2917396a8a.png)
 
 
 **output of d_ff for all clock cycles**
 
-![dff_cb_ss3](https://user-images.githubusercontent.com/110448382/190954912-78ef6ee0-489b-47a0-b753-851949bdcda5.png)
+![case1](https://user-images.githubusercontent.com/110448382/191226229-04947bc6-b25a-4572-946d-28b00d0d0193.png)
 
 
 
@@ -588,12 +588,12 @@ the output is shown in the below figure
 
 **Transcript output**
 
-![dff_cb_ss2](https://user-images.githubusercontent.com/110448382/190954180-c24851a3-24ec-4c45-9ec2-fca68fcd0f7f.png)
+![case_t2](https://user-images.githubusercontent.com/110448382/191226341-3fef2183-f734-476f-9969-1f91af00175e.png)
 
 
 **output of d_ff for all clock cycles**
 
-![dff_cb_ss3](https://user-images.githubusercontent.com/110448382/190954186-42dd7b1c-4546-44d3-8730-2dd29da0f65a.png)
+![case2](https://user-images.githubusercontent.com/110448382/191226469-ef5683d9-59d5-44f1-b148-ef6ae061435b.png)
 
 
 
@@ -761,13 +761,16 @@ wave form @negedge clock
 
 ` DUT side [25]=d_tb_drive:1 q_dut_sample:1`
 
-**output of d_ff for all clock cycles**
 
-![image](https://user-images.githubusercontent.com/110412474/190889483-16485595-1296-41d4-9d9e-d1f71f1701a7.png)
 
 **Transcript output**
 
-![dff_cb_ss1](https://user-images.githubusercontent.com/110448382/190952853-f6aa412a-e397-460a-ae05-8e7ae44c831f.png)
+![case_t3](https://user-images.githubusercontent.com/110448382/191226612-0350328e-6f31-4743-b085-ca7872a1cb2f.png)
+
+
+**output of d_ff for all clock cycles**
+
+![case3](https://user-images.githubusercontent.com/110448382/191226727-9b390710-cc75-46d1-b909-2fde6c65218a.png)
 
 
 ---     
